--- a/Seccion_3_Tipos_Primitivos/nbproject/project.properties
+++ b/Seccion_3_Tipos_Primitivos/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Seccion_3_Tipos_Primitivos
+application.vendor=Adrian
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Seccion_3_Tipos_Primitivos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Seccion_3_Tipos_Primitivos
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
@@ -44,8 +46,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=15
+javac.target=15
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -75,7 +77,7 @@ main.class=seccion_3_tipos_primitivos.Seccion_3_Tipos_Primitivos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_15
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
