--- a/Seccion_3_Tipos_Primitivos/nbproject/project.properties
+++ b/Seccion_3_Tipos_Primitivos/nbproject/project.properties
@@ -77,7 +77,7 @@ main.class=seccion_3_tipos_primitivos.Seccion_3_Tipos_Primitivos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_15
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
