--- a/Seccion_5_Sentencias_Control/build.xml
+++ b/Seccion_5_Sentencias_Control/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="HiloTiempo" default="default" basedir=".">
-    <description>Builds, tests, and runs the project HiloTiempo.</description>
+<project name="Seccion_5_Sentencias_Control" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Seccion_5_Sentencias_Control.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="HiloTiempo-impl.jar">
+        <target name="run" depends="Seccion_5_Sentencias_Control-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
