--- a/Seccion_5_Sentencias_Control/nbproject/project.properties
+++ b/Seccion_5_Sentencias_Control/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/HiloTiempo.jar
+dist.jar=${dist.dir}/Seccion_5_Sentencias_Control.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/HiloTiempo
+dist.jlink.output=${dist.jlink.dir}/Seccion_5_Sentencias_Control
 excludes=
 includes=**
 jar.compress=false
@@ -44,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=HiloTiempo
-main.class=vista.Principal
+jlink.launcher.name=Seccion_5_Sentencias_Control
+main.class=seccion_5_sentencias_control.Sentencia
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
