--- a/Seccion_5_Sentencias_Control/nbproject/project.properties
+++ b/Seccion_5_Sentencias_Control/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Seccion_5_Sentencias_Control
+application.vendor=Adrian
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Seccion_5_Sentencias_Control.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Seccion_5_Sentencias_Control
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
