--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Seccion_5_Sentencias_Control/dist/
 /Seccion_6_Ciclos_Java/nbproject/private/
 /Seccion_6_Ciclos_Java/build/
+/Seccion_7_Creacion_Clases/Seccion_7/nbproject/private/
+/Seccion_7_Creacion_Clases/Seccion_7/build/
